@@ -1,25 +1,46 @@
 package com.fnproject.fn.runtime;
 
-import com.fnproject.fn.api.*;
-import com.fnproject.fn.runtime.coercion.*;
+import com.fnproject.fn.api.FunctionInvoker;
+import com.fnproject.fn.api.InputBinding;
+import com.fnproject.fn.api.InputCoercion;
+import com.fnproject.fn.api.InputEvent;
+import com.fnproject.fn.api.InvocationContext;
+import com.fnproject.fn.api.MethodWrapper;
+import com.fnproject.fn.api.OutputBinding;
+import com.fnproject.fn.api.OutputCoercion;
+import com.fnproject.fn.api.OutputEvent;
+import com.fnproject.fn.api.RuntimeContext;
+import com.fnproject.fn.runtime.coercion.ByteArrayCoercion;
+import com.fnproject.fn.runtime.coercion.InputEventCoercion;
+import com.fnproject.fn.runtime.coercion.OutputEventCoercion;
+import com.fnproject.fn.runtime.coercion.StringCoercion;
+import com.fnproject.fn.runtime.coercion.VoidCoercion;
 import com.fnproject.fn.runtime.coercion.jackson.JacksonCoercion;
 import com.fnproject.fn.runtime.exception.FunctionClassInstantiationException;
 import com.fnproject.fn.runtime.exception.FunctionConfigurationException;
-import com.fnproject.fn.runtime.exception.FunctionInputHandlingException;
+import com.fnproject.fn.api.exception.FunctionInputHandlingException;
+import com.fnproject.fn.runtime.flow.FlowContinuationInvoker;
 
 import java.lang.annotation.Annotation;
 import java.lang.reflect.Constructor;
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
 import java.lang.reflect.Modifier;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.HashMap;
+import java.util.LinkedList;
+import java.util.List;
+import java.util.Map;
+import java.util.Objects;
+import java.util.Optional;
 
 public class FunctionRuntimeContext implements RuntimeContext {
 
-    private final Class<?> targetClass;
-    private final Method targetMethod;
     private final Map<String, String> config;
+    private final MethodWrapper method;
     private Map<String, Object> attributes = new HashMap<>();
+    private List<FunctionInvoker> configuredInvokers = new ArrayList<>();
 
     private Object instance;
 
@@ -28,18 +49,18 @@ public class FunctionRuntimeContext implements RuntimeContext {
     private final List<OutputCoercion> builtinOutputCoercions = Arrays.asList(new StringCoercion(), new ByteArrayCoercion(), new VoidCoercion(), new OutputEventCoercion(), JacksonCoercion.instance());
     private final List<OutputCoercion> userOutputCoercions = new LinkedList<>();
 
-    public FunctionRuntimeContext(Class<?> targetClass, Method targetMethod, Map<String, String> config) {
-        this.targetClass = Objects.requireNonNull(targetClass);
-        this.targetMethod = Objects.requireNonNull(targetMethod);
+    public FunctionRuntimeContext(MethodWrapper method, Map<String, String> config) {
+        this.method = method;
         this.config = Objects.requireNonNull(config);
+        configuredInvokers.addAll(Arrays.asList(new FlowContinuationInvoker(), new MethodFunctionInvoker()));
     }
 
     @Override
     public Optional<Object> getInvokeInstance() {
-        if (!Modifier.isStatic(getTargetMethod().getModifiers())) {
+        if (!Modifier.isStatic(getMethod().getTargetMethod().getModifiers())) {
             if (instance == null) {
                 try {
-                    Constructor<?> constructors[] = getTargetClass().getConstructors();
+                    Constructor<?> constructors[] = getMethod().getTargetClass().getConstructors();
                     if (constructors.length == 1) {
                         Constructor<?> ctor = constructors[0];
                         if (ctor.getParameterTypes().length == 0) {
@@ -48,42 +69,32 @@ public class FunctionRuntimeContext implements RuntimeContext {
                             if (RuntimeContext.class.isAssignableFrom(ctor.getParameterTypes()[0])) {
                                 instance = ctor.newInstance(FunctionRuntimeContext.this);
                             } else {
-                                if ( getTargetClass().getEnclosingClass() != null && ! Modifier.isStatic(getTargetClass().getModifiers()) ) {
-                                    throw new FunctionClassInstantiationException("The function " + getTargetClass() + " cannot be instantiated as it is a non-static inner class");
+                                if ( getMethod().getTargetClass().getEnclosingClass() != null && ! Modifier.isStatic(getMethod().getTargetClass().getModifiers()) ) {
+                                    throw new FunctionClassInstantiationException("The function " + getMethod().getTargetClass() + " cannot be instantiated as it is a non-static inner class");
                                 } else {
-                                    throw new FunctionClassInstantiationException("The function " + getTargetClass() + " cannot be instantiated as its constructor takes an unrecognized argument of type " + constructors[0].getParameterTypes()[0] + ". Function classes should have a single public constructor that takes either no arguments or a RuntimeContext argument");
+                                    throw new FunctionClassInstantiationException("The function " + getMethod().getTargetClass() + " cannot be instantiated as its constructor takes an unrecognized argument of type " + constructors[0].getParameterTypes()[0] + ". Function classes should have a single public constructor that takes either no arguments or a RuntimeContext argument");
                                 }
                             }
                         } else {
-                            throw new FunctionClassInstantiationException("The function " + getTargetClass() + " cannot be instantiated as its constructor takes more than one argument. Function classes should have a single public constructor that takes either no arguments or a RuntimeContext argument");
+                            throw new FunctionClassInstantiationException("The function " + getMethod().getTargetClass() + " cannot be instantiated as its constructor takes more than one argument. Function classes should have a single public constructor that takes either no arguments or a RuntimeContext argument");
                         }
                     } else {
                         if (constructors.length == 0) {
-                            throw new FunctionClassInstantiationException("The function " + getTargetClass() + " cannot be instantiated as it has no public constructors. Function classes should have a single public constructor that takes either no arguments or a RuntimeContext argument");
+                            throw new FunctionClassInstantiationException("The function " + getMethod().getTargetClass() + " cannot be instantiated as it has no public constructors. Function classes should have a single public constructor that takes either no arguments or a RuntimeContext argument");
                         } else {
-                            throw new FunctionClassInstantiationException("The function " + getTargetClass() + " cannot be instantiated as it has multiple public constructors. Function classes should have a single public constructor that takes either no arguments or a RuntimeContext argument");
+                            throw new FunctionClassInstantiationException("The function " + getMethod().getTargetClass() + " cannot be instantiated as it has multiple public constructors. Function classes should have a single public constructor that takes either no arguments or a RuntimeContext argument");
 
                         }
                     }
                 } catch (InvocationTargetException e) {
-                    throw new FunctionClassInstantiationException("An error occurred in the function constructor while instantiating " + getTargetClass(), e.getCause());
+                    throw new FunctionClassInstantiationException("An error occurred in the function constructor while instantiating " + getMethod().getTargetClass(), e.getCause());
                 } catch (InstantiationException | IllegalAccessException e) {
-                    throw new FunctionClassInstantiationException("The function class " + getTargetClass() + " could not be instantiated", e);
+                    throw new FunctionClassInstantiationException("The function class " + getMethod().getTargetClass() + " could not be instantiated", e);
                 }
             }
             return Optional.of(instance);
         }
         return Optional.empty();
-    }
-
-    @Override
-    public Class<?> getTargetClass() {
-        return targetClass;
-    }
-
-    @Override
-    public Method getTargetMethod() {
-        return targetMethod;
     }
 
     @Override
@@ -116,18 +127,9 @@ public class FunctionRuntimeContext implements RuntimeContext {
         userInputCoercions.add(Objects.requireNonNull(ic));
     }
 
-    /**
-     * Gets a stream of the possible {@link InputCoercion} for this parameter.
-     * <p>
-     * If the parameter has been annotated with a specific coercion, only that coercion is
-     * tried, otherwise configuration-provided coercions are tried first and builtin
-     * coercions second.
-     *
-     * @param targetMethod The user function method
-     * @param param        The index of the parameter
-     */
-    List<InputCoercion> getInputCoercions(Method targetMethod, int param) {
-        Annotation parameterAnnotations[] = targetMethod.getParameterAnnotations()[param];
+    @Override
+    public List<InputCoercion> getInputCoercions(MethodWrapper targetMethod, int param) {
+        Annotation parameterAnnotations[] = targetMethod.getTargetMethod().getParameterAnnotations()[param];
         Optional<Annotation> coercionAnnotation = Arrays.stream(parameterAnnotations)
                 .filter((ann) -> ann.annotationType().equals(InputBinding.class))
                 .findFirst();
@@ -135,9 +137,9 @@ public class FunctionRuntimeContext implements RuntimeContext {
             try {
                 List<InputCoercion> coercionList = new ArrayList<InputCoercion>();
                 InputBinding inputBindingAnnotation = (InputBinding) coercionAnnotation.get();
-                coercionList.add(inputBindingAnnotation.coercion().newInstance());
+                coercionList.add(inputBindingAnnotation.coercion().getDeclaredConstructor().newInstance());
                 return coercionList;
-            } catch (IllegalAccessException | InstantiationException e) {
+            } catch (IllegalAccessException | InstantiationException | NoSuchMethodException | InvocationTargetException e) {
                 throw new FunctionInputHandlingException("Unable to instantiate input coercion class for argument " + param + " of " + targetMethod);
             }
         }
@@ -152,25 +154,43 @@ public class FunctionRuntimeContext implements RuntimeContext {
         userOutputCoercions.add(Objects.requireNonNull(oc));
     }
 
-    /**
-     * Gets a stream of the possible {@link OutputCoercion} for the method.
-     * <p>
-     * If the method has been annotated with a specific coercion, only that coercion is
-     * tried, otherwise configuration-provided coercions are tried first and builtin
-     * coercions second.
-     *
-     * @param method The user function method
-     */
-    List<OutputCoercion> getOutputCoercions(Method method) {
+    @Override
+    public void setInvoker(FunctionInvoker invoker) {
+        configuredInvokers.add(1, invoker);
+    }
+
+    @Override
+    public MethodWrapper getMethod() {
+        return method;
+    }
+
+    public FunctionInvocationContext newInvocationContext() {
+        return new FunctionInvocationContext(this);
+    }
+
+    public OutputEvent tryInvoke(InputEvent evt, InvocationContext entryPoint) {
+        OutputEvent output = null;
+        for (FunctionInvoker invoker : configuredInvokers) {
+            Optional<OutputEvent> result = invoker.tryInvoke(entryPoint, evt);
+            if (result.isPresent()) {
+                output = result.get();
+                break;
+            }
+        }
+        return output;
+    }
+
+    @Override
+    public List<OutputCoercion> getOutputCoercions(Method method) {
         OutputBinding coercionAnnotation = method.getAnnotation(OutputBinding.class);
         if (coercionAnnotation != null) {
             try {
                 List<OutputCoercion> coercionList = new ArrayList<OutputCoercion>();
-                coercionList.add(coercionAnnotation.coercion().newInstance());
+                coercionList.add(coercionAnnotation.coercion().getDeclaredConstructor().newInstance());
                 return coercionList;
 
-            } catch (IllegalAccessException | InstantiationException e) {
-                throw new FunctionConfigurationException("Unable to instantiate output coercion class for method " + targetMethod);
+            } catch (IllegalAccessException | InstantiationException | NoSuchMethodException | InvocationTargetException e) {
+                throw new FunctionConfigurationException("Unable to instantiate output coercion class for method " + getMethod());
             }
         }
         List<OutputCoercion> outputList = new ArrayList<OutputCoercion>();
@@ -179,4 +199,7 @@ public class FunctionRuntimeContext implements RuntimeContext {
         return outputList;
     }
 
+    public MethodWrapper getMethodWrapper() {
+        return method;
+    }
 }
